--- a/admin/src/locales/en/translation.json
+++ b/admin/src/locales/en/translation.json
@@ -35,6 +35,78 @@
     "category-enter-name": "Enter Category Name",
     "category-enter-slug": "Enter Category Name",
     "category-enter-serial": "Enter Category Price",
-    "category-enter-description": "Enter Category Description"
+    "category-enter-description": "Enter Category Description",
+    "category-addbutton": "Create Category",
+    "categorylist-tittle": "Category",
+    "categorylist-tittle2": "Category List",
+    "categorylistcategorylist-head": "Category List",
+    "categorylist-search": "Search...",
+    "categorylist-order": "Order By",
+    "categorylist-order-name": "Name",
+    "categorylist-order-create": "Created at",
+    "categorylist-order-update": "Updated at",
+    "categorylist-order-serial": "Price",
+    "categorylist-order-status": "Status",
+    "categorylist-order-direction": "Order Direction",
+    "categorylist-order-perpage": "Per Page",
+    "categorylist-order-search": "Search",
+    "categorylist-index": "Index",
+    "categorylist-nameslug": "Name / Slug",
+    "categorylist-name": "Name",
+    "categorylist-slug": "Slug",
+    "categorylist-serialstatus": "Price / Status",
+    "categorylist-serial": "Price",
+    "categorylist-status": "Status",
+    "categorylist-photo": "Photo",
+    "categorylist-createdby": "Created By",
+    "categorylist-createdat": "Created At",
+    "categorylist-action": "Action",
+    "categorylist-created": "Created",
+    "categorylist-updated": "Updated",
+    "categorylist-modal-photo": "Category Photo",
+    "categorylist-modal-details": "Category Details",
+    "categorylist-page-next": "Next",
+    "categorylist-page-first": "First",
+    "categorylist-page-previous": "Previous",
+    "categorylist-page-last": "Last",
+    "categoryedit-tittle": "Category",
+    "categoryedit-tittle2": "Category Edit",
+    "categoryedit-head": "Category Edit",
+    "categoryedit-button": "Save",
+    "categorydetails-id": "ID",
+    "categorydetails-category": "Category",
+    "cart-head": "Cart Menu",
+    "cart-return": "RETURN",
+    "cart-return2": "Return",
+    "cart-noitems": "No Items",
+    "cart-discount": "Discount",
+    "cart-cash": "Cash",
+    "cart-card": "Card",
+    "cart-paid": "Paid",
+    "cart-total": "Total",
+    "cart-tax": "Tax",
+    "cart-subtotal": "Subtotal",
+    "cart-paymentdone": "Payment done. you want ticket?",
+    "cart-ticket": "Ticket",
+    "cart-noticket": "No Ticket",
+    "cart-numitems": "Products",
+    "cart-selectcat": "Select Any Category",
+    "cart-button-home": "Home",
+    "cart-button-cart": "Cart",
+    "cart-button-orders": "Orders",
+    "orders-head": "Orders",
+    "orders-orderticket": "Order Ticket",
+    "orders-history": "ORDER HISTORY",
+    "orders-pages": "Pages",
+    "orders-num": "ID",
+    "orders-buyer": "Costumer",
+    "orders-products": "Products",
+    "orders-totalprods": "Total Products",
+    "orders-payment": "Payment Method",
+    "orders-total": "Total",
+    "orders-subtotal": "Subtotal",
+    "orders-date": "Date",
+    "orders-actions": "Actions",
+    "orders-noorders": "No Orders Match"
 
 }
