--- a/admin/src/locales/es/translation.json
+++ b/admin/src/locales/es/translation.json
@@ -4,10 +4,10 @@
     "settings": "Ajustes",
     "sidebar-dashboard": "Panel Central",
     "sidebar-management": "Gestión Productos",
-    "sidebar-categories": "Categorias",
+    "sidebar-categories": "Categorías",
     "sidebar-components": "Funcionalidades",
-    "sidebar-categorylist": "Lista de Categorias",
-    "sidebar-categoryadd": "Añadir Categoria",
+    "sidebar-categorylist": "Lista de Categorías",
+    "sidebar-categoryadd": "Añadir Categoría",
     "sidebar-subcategories": "Productos",
     "sidebar-subcategorylist": "Lista de Productos",
     "sidebar-subcategoryadd": "Añadir Producto",
@@ -20,9 +20,9 @@
     "dashboard-tittle": "Panel de Control",
     "dashboard-tittle2": "Información de Ventas",
     "dashboard-head": "Panel de Control",
-    "category-tittle": "Categoria",
-    "category-tittle2": "Nueva Categoria",
-    "category-head": "Nueva Categoria",
+    "category-tittle": "Categoría",
+    "category-tittle2": "Nueva Categoría",
+    "category-head": "Nueva Categoría",
     "category-name": "Nombre",
     "category-slug": "Identificativo",
     "category-serial": "Precio",
@@ -32,8 +32,81 @@
     "category-status-inactive": "Inactivo",
     "category-photo": "Foto",
     "category-description": "Descripción",
-    "category-enter-name": "Nombre de Categoria",
-    "category-enter-slug": "Identificador de Categoria",
-    "category-enter-serial": "Precio Categoria",
-    "category-enter-description": "Descripción Categoria"
+    "category-enter-name": "Nombre de Categoría",
+    "category-enter-slug": "Identificador de Categoría",
+    "category-enter-serial": "Precio Categoría",
+    "category-enter-description": "Descripción Categoría",
+    "category-addbutton": "Crear Categoría",
+    "categorylist-tittle": "Categoría",
+    "categorylist-tittle2": "Lista de Categorías",
+    "categorylistcategorylist-head": "Lista de Categorías",
+    "categorylist-search": "Buscar...",
+    "categorylist-order": "Ordenar",
+    "categorylist-order-name": "Nombre",
+    "categorylist-order-create": "Fecha Creación",
+    "categorylist-order-update": "Fecha Modificación",
+    "categorylist-order-serial": "Precio",
+    "categorylist-order-status": "Estado",
+    "categorylist-order-direction": "Orden",
+    "categorylist-order-perpage": "Categorías Por Página",
+    "categorylist-order-search": "Buscar",
+    "categorylist-index": "Índice",
+    "categorylist-nameslug": "Nombre / Identidad",
+    "categorylist-name": "Nombre",
+    "categorylist-slug": "Identidad",
+    "categorylist-serialstatus": "Precio / Estado",
+    "categorylist-serial": "Precio",
+    "categorylist-status": "Estado",
+    "categorylist-photo": "Foto",
+    "categorylist-createdby": "Creador",
+    "categorylist-createdat": "Fecha",
+    "categorylist-action": "Acciones",
+    "categorylist-created": "Creación",
+    "categorylist-updated": "Actualización",
+    "categorylist-modal-photo": "Foto",
+    "categorylist-modal-details": "Detalles de Categoría",
+    "categorylist-page-next": "Siguiente",
+    "categorylist-page-first": "Primero",
+    "categorylist-page-previous": "Anterior",
+    "categorylist-page-last": "Último",
+    "categoryedit-tittle": "Categoría",
+    "categoryedit-tittle2": "Editar Categoría",
+    "categoryedit-head": "Editar Categoría",
+    "categoryedit-button": "Save",
+    "categorydetails-id": "ID",
+    "categorydetails-category": "Categoria",
+    "cart-head": "Menu de Pago",
+    "cart-return": "DEVOLUCIÓN",
+    "cart-return2": "Devolución",
+    "cart-noitems": "Sin Articulos",
+    "cart-discount": "Descuento",
+    "cart-cash": "Efectivo",
+    "cart-card": "Tarjeta",
+    "cart-paid": "Pagado",
+    "cart-total": "Total",
+    "cart-tax": "IVA",
+    "cart-subtotal": "Subtotal",
+    "cart-paymentdone": "Pagado Correctamente. ¿Quiere Ticket?",
+    "cart-ticket": "Ticket",
+    "cart-noticket": "Sin Ticket",
+    "cart-numitems": "Productos",
+    "cart-selectcat": "Seleccione Categoría",
+    "cart-button-home": "Home",
+    "cart-button-cart": "Caja de Pago",
+    "cart-button-orders": "Pedidos",
+    "orders-head": "Pedidos",
+    "orders-orderticket": "Número Factura",
+    "orders-history": "HISTORIAL DE PEDIDOS",
+    "orders-pages": "Páginas",
+    "orders-num": "ID",
+    "orders-buyer": "Comprador",
+    "orders-products": "Productos",
+    "orders-totalprods": "Productos Totales",
+    "orders-payment": "Forma Pago",
+    "orders-total": "Total",
+    "orders-subtotal": "Subtotal",
+    "orders-date": "Fecha",
+    "orders-actions": "Acciones",
+    "orders-noorders": "Sin Pedidos que Correspondan"
+
 }
