--- a/admin/src/locales/es/translation.json
+++ b/admin/src/locales/es/translation.json
@@ -128,6 +128,11 @@
     "invoice-print": "Imprimir Factura",
     "barcode-tittle": "Codigo de Barras",
     "barcode-tittle2": "Generar e Imprimir",
-    "barcode-head": "Generador Codigo de Barras"
+    "barcode-head": "Generador Codigo de Barras",
+    "barcode-selectCategory": "Selecione Categoría",
+    "barcode-selectProduct": "Seleccione Producto",
+    "barcode-button": "Buscar",
+    "barcode-price": "Precio",
+    "barcode-print": "Imprimir Códigos"
 
 }
